--- a/web/src/components/Hero.css
+++ b/web/src/components/Hero.css
@@ -1,19 +1,31 @@
 .hero--container {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 40%;
     background-image: url(../assets/logo1.png);
-    background-repeat: none;
+    background-position: center;
     background-size: cover;
-    background-position: 50% 50%;   
+    height: 400px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
 }
 
-.mask {
-    position: absolute;
-    width: 100%;
+.hero--container::after {
+    content: "";
     height: 100%;
-    background-color: rgba( 0, 0, 0, .4);
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
+.hero--container > h1 {
+    position: absolute;
+    font-size: 4rem;
+}
+
+.hero--container > p {
+    position: absolute;
+    padding-top: 40%;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
