--- a/web/src/components/Form.css
+++ b/web/src/components/Form.css
@@ -11,11 +11,11 @@
     font-size: 1.6rem;
     padding-bottom: 1rem;
     align-self: flex-start;
-    padding-left: 9%;
+    padding-left: 7%;
 }
 
 .form--container > input {
-    width: 76%;
+    width: 80%;
     height: 5%;
     margin-bottom: 1rem;
     border: solid 1px;
@@ -37,11 +37,18 @@
     font-size: 1rem;
     color: rgba(0, 0, 0, .4);
     border-color: #000;
-    padding: 5% 3%;
+    padding: 3% 5%;
 }
 
 .form--container > button {
-
+    border: none;
+    border-radius: 35px;
+    width: 60%;
+    height: 10%;
+    font-family: 'Roboto Mono';
+    font-size: 1.3rem;
+    color: #fff;
+    background-color: #000;
 }
 
 
