--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,7 +3,14 @@
     padding: 0;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 #root {
+    width: 100%;
+    height: 100%;
     font-family: 'Roboto Mono', monospace;
-    
 }
