--- a/web/src/components/Gallery.css
+++ b/web/src/components/Gallery.css
@@ -12,6 +12,41 @@
     background-position: center;
     margin: .5%;
     flex-grow: 1;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.gal--container > div::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+}
+
+.gal--container > div:hover {
+    transform: scale(.9);
+    transition: transform 0.4s ease-out;
+}
+
+.arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../assets/back.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: .5%;
+    flex-grow: 1;
+}
+
+.arrow > button {
+    position: absolute;
+    border: none;
+    background: none;
+    width: 20%;
+    height: 10%;
 }
 
 .img1 {
